He cambiado el index

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@ with the same id in at the same HTML Page
   <div class="box" id="content">
     <h1>HOLAAAA</h1>
     <p>buenass<p>
-      <img id="main-image" src="5a4f6626472a02aac9330e7b1c2307d8.jpg/" />
+      <img id="main-image" src="images/5a4f6626472a02aac9330e7b1c2307d8.jpg" />
 
 
   </div>
