He cambiado el index

--- a/index.html
+++ b/index.html
@@ -15,6 +15,13 @@ with the same id in at the same HTML Page
 
 <div class="grid-container">
   <div class="box" id="header">
+
+    <ul id="menu">
+      <li> Home </li>
+      <li> Partidos </li>
+      <li> Jugadores </li>
+      <li> Juegos </li> 
+    </ul>
 <h1>me cago en la leche</h1>
 <p>En el vídeo, le retan a explicar varias expresiones, pero sin duda la más peculiar es "me cago en la leche". La cara que pone al traducir literalmente la expresión es la muestra más evidente de la absurdidad de la frase. "¿Quién fue la primera persona en España en decirlo? Y luego todo el mundo le imitó. 'Me cago en la leche' y todos pensaron 'eso mola, voy a cagarme en la leche yo también".<p>
   </div>
